--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import ServicesPreview from '../components/ServicesPreview';
 
 <Layout title="LMP Consulting GmbH - IT-Beratung, Projektleitung & Change Management">
   <Header />
-  <main>
+  <main role="main" id="main-content">
     <Hero client:load />
     <ServicesPreview client:load />
     
