--- a/src/layouts/StandardLayout.astro
+++ b/src/layouts/StandardLayout.astro
@@ -1,4 +1,8 @@
 ---
+import "../styles/global.css";
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
+
 export interface Props {
   title: string;
   description?: string;
@@ -14,10 +18,6 @@ const {
 } = Astro.props;
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
-
-// Import Header and Footer
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
 ---
 
 <!DOCTYPE html>
